--- a/manifest.json
+++ b/manifest.json
@@ -1,18 +1,22 @@
 {
   "manifest_version": 2,
 
-  "name": "MoSto",
+  "name": "speedUP",
   "description": "A simple shortcut to navigate in the countries and change to mobile in one click",
   "version": "1.0",
 
   "browser_action": {
-    "default_icon": "icon.png",
+    "default_icon": "assets/icon.png",
     "default_popup": "popup.html",
     "default_title": "MoSto"
   },
 
   "permissions": [
     "activeTab",
+    "cookies",
+    "tabs",
+    "http://*/",
+    "https://*/",
     "https://ajax.googleapis.com/"
   ]
 }
